--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -17,8 +17,17 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '17'
-        distribution: 'temurin'
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
+    - name: Deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.UBUNTU_SERVER_IP }}
+        username: ${{ secrets.UBUNTU_SERVER_USERNAME }}
+        password: ${{ secrets.UBUNTU_SERVER_PASSWORD }}
+        port: ${{ secrets.PORT }}
+        script: |
+          rm -rf /dev/project/kafka-demo
+          cp /home/runner/work/kafka_demo/kafka_demo/target/*.jar /dev/project/kafka-demo
